[FIX] web: fix back/clear buttons in modal for small screen
This commit forces the color of all buttons in the header to have a
better-look consistency.

Steps to reproduce:
* Open Odoo on small screen
* Go to Sale
* Create a new SO
* Click on customer field to open the Kanban view => BUG
  the clear button is not visible (enterprise)

closes odoo/odoo#141024

X-original-commit: aa748820d06ddd84465c404ce158e882307dbda6
Related: odoo/enterprise#50180

--- a/addons/web/static/src/legacy/scss/modal.scss
+++ b/addons/web/static/src/legacy/scss/modal.scss
@@ -89,7 +89,7 @@
                     .modal-header {
                         background: $o-navbar-background;
 
-                        .modal-title, .o_subtitle, button.close {
+                        .modal-title, .o_subtitle, .btn {
                             color: $o-navbar-entry-color;
                         }
                     }
